// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an icon if no image and no initials are set 1`] = `
<div
  className="avatar isDark"
  style={
    Object {
      "backgroundColor": undefined,
      "borderColor": undefined,
    }
  }
>
  <svg
    className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
    data-testid="person"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="_2GsLyQLHv8yNULHeXGdver _29W47x5R7CHDPdmq99tUBc"
      d="M512 469.333c-94.255 0-170.665-76.41-170.665-170.667s76.41-170.667 170.665-170.667c94.259 0 170.667 76.41 170.667 170.667s-76.407 170.667-170.667 170.667zM512 384c47.13 0 85.333-38.205 85.333-85.333s-38.204-85.333-85.333-85.333c-47.125 0-85.333 38.205-85.333 85.333s38.208 85.333 85.333 85.333z"
    />
    <path
      className="_2GsLyQLHv8yNULHeXGdver _29W47x5R7CHDPdmq99tUBc"
      d="M225.679 810.667h572.644c-36.698-123.392-151.1-213.333-286.323-213.333s-249.623 89.941-286.321 213.333zM810.795 810.654l-0.115 0.013zM213.322 810.667l-0.114-0.013zM129.919 811.332c38.557-171.341 199.096-299.332 382.081-299.332 182.989 0 343.629 127.991 382.187 299.332 1.263 5.615 1.788 11.123 1.647 16.461-0.068 2.722-0.311 5.402-0.717 8.026-5.303 34.441-38.46 60.181-76.902 60.181h-612.327c-39.024 0-72.603-26.526-77.123-61.756-0.939-7.313-0.624-15.006 1.155-22.912z"
    />
  </svg>
</div>
`;

exports[`displays initials if no image is set 1`] = `
<div
  className="avatar isDark"
  style={
    Object {
      "backgroundColor": undefined,
      "borderColor": undefined,
    }
  }
>
  <span
    className="initials smallInitials"
  >
    JBL
  </span>
</div>
`;

exports[`renders a Avatar 1`] = `
<div
  aria-label="The Jobbler"
  className="avatar large isDark"
  role="img"
  style={
    Object {
      "backgroundColor": undefined,
      "backgroundImage": "url(https://api.adorable.io/avatars/150/jobbler)",
      "borderColor": undefined,
    }
  }
/>
`;
